[tool.poetry]
name = "devcontainer-experiment"
version = "0.1.0"
description = ""
authors = ["Guy Hoozdis <GuyHoozdis@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"


[tool.poetry.group.dev.dependencies]
ipython = "*"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
